#task 3 Добавил метод Index в HomeController
Для возвращения данных из базы данных

--- a/TenMovies/wwwroot/css/site.css
+++ b/TenMovies/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
   font-size: 14px;
+ 
 }
 
 @media (min-width: 768px) {
@@ -19,4 +20,27 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-color:darkgray;
+}
+.header {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    font-family:'Cascadia Code';
+    color:brown;
+        
+}
+.content {
+    display:flex;
+    flex-direction:row;
+}
+
+.image {
+    width:200px;
+    height:400px;
+
+}
+.details {
+    width:500px;
 }
