--- a/TenMovies/Views/Home/Index.cshtml
+++ b/TenMovies/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Top 10 Movies";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="content">
+    <div class="image">Картинка</div>
+    <div class="details">
+        <p>Название</p>
+        <p>Режисер</p>
+        <p>Жанр</p>
+        <p>Год</p>
+        <p>Описание</p>
+    </div>
 </div>
