--- a/TenMovies/Views/Shared/_Layout.cshtml
+++ b/TenMovies/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
 <body>
     <header>
         
-        <div class="header">
-            <h1>Топ 10 фильмов</h1>
+        <div>
+            <label class="header">Топ 10 фильмов</label>
         </div>
         
     </header>
