#task 5 Добавил ссылку на страницу Админки
Нужна для реализации CRUD операций

--- a/TenMovies/Views/Shared/_Layout.cshtml
+++ b/TenMovies/Views/Shared/_Layout.cshtml
@@ -10,7 +10,10 @@
 </head>
 <body>
     <header>
-        
+        <div class="menu">
+            <a asp-action="Admin" class="admin">Админка</a>
+        </div>
+       
         <div>
             <label class="header">Топ 10 фильмов</label>
         </div>
