--- a/TenMovies/Views/Home/Admin.cshtml
+++ b/TenMovies/Views/Home/Admin.cshtml
@@ -15,7 +15,7 @@
 <h1>Операции CRUD</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="links">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -51,9 +51,9 @@
                 <td>
                     @item.Year             
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="links">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" class="links">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="links">Delete</a>
                 </td>
             </tr>
         }
