--- a/TenMovies/wwwroot/css/site.css
+++ b/TenMovies/wwwroot/css/site.css
@@ -92,10 +92,25 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
     padding-left:10px;
 }
-.menu {
 
+.admin:hover {
+    color: darkred;
+}
+
+
+.menu {
     display: flex;
     justify-content: start;
     align-items: center;
     font-family: Century Gothic;
+}
+
+.links {
+    
+    color: #D3D3D3;
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+}
+
+.links:hover {
+    color:darkred;
 }
