--- a/TenMovies/Views/Home/Create.cshtml
+++ b/TenMovies/Views/Home/Create.cshtml
@@ -39,9 +39,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Описание</label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
+               @*  <input asp-for="Description" class="form-control" /> *@
                 @*<span asp-validation-for="Description" class="text-danger"></span>*@
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
