--- a/TenMovies/Views/Home/Edit.cshtml
+++ b/TenMovies/Views/Home/Edit.cshtml
@@ -4,8 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-<h4>Movie</h4>
+<h1>Редактирование фильма</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
