--- a/TenMovies/Views/Home/Delete.cshtml
+++ b/TenMovies/Views/Home/Delete.cshtml
@@ -4,11 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1>Удаление фильма</h1>
+<h3>Вы уверены, что хотите удалить фильм?</h3>
 <div>
-    <h4>Movie</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
